--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/recipemanager?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=recipemanageradmin
+spring.datasource.password=recipemanageradmin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
